--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -9,3 +9,15 @@
   volume = {26},
   year = {2013}
 }
+@article{TransH,
+  title={Knowledge Graph Embedding by Translating on Hyperplanes},
+  volume={28},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/8870},
+  DOI={10.1609/aaai.v28i1.8870},
+  abstractNote={ &lt;p&gt; We deal with embedding a large scale knowledge graph composed of entities and relations into a continuous vector space. TransE is a promising method proposed recently, which is very efficient while achieving state-of-the-art predictive performance. We discuss some mapping properties of relations which should be considered in embedding, such as reflexive, one-to-many, many-to-one, and many-to-many. We note that TransE does not do well in dealing with these properties. Some complex models are capable of preserving these mapping properties but sacrifice efficiency in the process. To make a good trade-off between model capacity and efficiency, in this paper we propose TransH which models a relation as a hyperplane together with a translation operation on it. In this way, we can well preserve the above mapping properties of relations with almost the same model complexity of TransE. Additionally, as a practical knowledge graph is often far from completed, how to construct negative examples to reduce false negative labels in training is very important. Utilizing the one-to-many/many-to-one mapping property of a relation, we propose a simple trick to reduce the possibility of false negative labeling. We conduct extensive experiments on link prediction, triplet classification and fact extraction on benchmark datasets like WordNet and Freebase. Experiments show TransH delivers significant improvements over TransE on predictive accuracy with comparable capability to scale up. &lt;/p&gt; },
+  number={1},
+  journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+  author={Wang, Zhen and Zhang, Jianwen and Feng, Jianlin and Chen, Zheng},
+  year={2014},
+  month={Jun.}
+}
