--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -21,3 +21,15 @@
   year={2014},
   month={Jun.}
 }
+@article{TransR,
+  title={Learning Entity and Relation Embeddings for Knowledge Graph Completion},
+  volume={29},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/9491},
+  DOI={10.1609/aaai.v29i1.9491},
+  abstractNote={ &lt;p&gt; Knowledge graph completion aims to perform link prediction between entities. In this paper, we consider the approach of knowledge graph embeddings. Recently, models such as TransE and TransH build entity and relation embeddings by regarding a relation as translation from head entity to tail entity. We note that these models simply put both entities and relations within the same semantic space. In fact, an entity may have multiple aspects and various relations may focus on different aspects of entities, which makes a common space insufficient for modeling. In this paper, we propose TransR to build entity and relation embeddings in separate entity space and relation spaces. Afterwards, we learn embeddings by first projecting entities from entity space to corresponding relation space and then building translations between projected entities. In experiments, we evaluate our models on three tasks including link prediction, triple classification and relational fact extraction. Experimental results show significant and consistent improvements compared to state-of-the-art baselines including TransE and TransH. &lt;/p&gt; },
+  number={1},
+  journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+  author={Lin, Yankai and Liu, Zhiyuan and Sun, Maosong and Liu, Yang and Zhu, Xuan},
+  year={2015},
+  month={Feb.}
+}
