--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -33,3 +33,13 @@
   year={2015},
   month={Feb.}
 }
+@inproceedings{DistMult,
+  author = {Yang, Bishan and Yih, Scott Wen-tau and He, Xiaodong and Gao, Jianfeng and Deng, Li},
+  title = {Embedding Entities and Relations for Learning and Inference in Knowledge Bases},
+  booktitle = {Proceedings of the International Conference on Learning Representations (ICLR) 2015},
+  year = {2015},
+  month = {May},
+  abstract = {We consider learning representations of entities and relations in KBs using the neural-embedding approach. We show that most existing models, including NTN (Socher et al., 2013) and TransE (Bordes et al., 2013b), can be generalized under a unified learning framework, where entities are low-dimensional vectors learned from a neural network and relations are bilinear and/or linear mapping functions. Under this framework, we compare a variety of embedding models on the link prediction task. We show that a simple bilinear formulation achieves new state-of-the-art results for the task (achieving a top-10 accuracy of 73.2% vs. 54.7% by TransE on Freebase). Furthermore, we introduce a novel approach that utilizes the learned relation embeddings to mine logical rules such as BornInCity(a,b) ^ City In Country (b,c) => Nationality(a,c). We find that embeddings learned from the bilinear objective are particularly good at capturing relational semantics, and that the composition of relations is characterized by matrix multiplication. More interestingly, we demonstrate that our embedding-based rule extraction approach successfully outperforms a state-of-the-art confidence-based rule mining approach in mining horn rules that involve compositional reasoning.},
+  url = {https://www.microsoft.com/en-us/research/publication/embedding-entities-and-relations-for-learning-and-inference-in-knowledge-bases/},
+  edition = {Proceedings of the International Conference on Learning Representations (ICLR) 2015},
+}
