--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -43,3 +43,12 @@
   url = {https://www.microsoft.com/en-us/research/publication/embedding-entities-and-relations-for-learning-and-inference-in-knowledge-bases/},
   edition = {Proceedings of the International Conference on Learning Representations (ICLR) 2015},
 }
+@inproceedings{ComplEx,
+  title={Complex embeddings for simple link prediction},
+  author={Trouillon, Th{\'e}o and Welbl, Johannes and Riedel, Sebastian and Gaussier, {\'E}ric and Bouchard, Guillaume},
+  booktitle={International conference on machine learning},
+  pages={2071--2080},
+  year={2016},
+  organization={PMLR},
+  url={https://proceedings.mlr.press/v48/trouillon16.html}
+}
