增加 SimplE 介绍页

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -52,3 +52,14 @@
   organization={PMLR},
   url={https://proceedings.mlr.press/v48/trouillon16.html}
 }
+@inproceedings{SimplE,
+  author = {Kazemi, Seyed Mehran and Poole, David},
+  booktitle = {Advances in Neural Information Processing Systems},
+  editor = {S. Bengio and H. Wallach and H. Larochelle and K. Grauman and N. Cesa-Bianchi and R. Garnett},
+  pages = {},
+  publisher = {Curran Associates, Inc.},
+  title = {SimplE Embedding for Link Prediction in Knowledge Graphs},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2018/file/b2ab001909a8a6f04b51920306046ce5-Paper.pdf},
+  volume = {31},
+  year = {2018}
+}
