增加 TransD 介绍页和例子

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -43,6 +43,24 @@
   url = {https://www.microsoft.com/en-us/research/publication/embedding-entities-and-relations-for-learning-and-inference-in-knowledge-bases/},
   edition = {Proceedings of the International Conference on Learning Representations (ICLR) 2015},
 }
+@inproceedings{TransD,
+  title = "Knowledge Graph Embedding via Dynamic Mapping Matrix",
+  author = "Ji, Guoliang  and
+    He, Shizhu  and
+    Xu, Liheng  and
+    Liu, Kang  and
+    Zhao, Jun",
+  editor = "Zong, Chengqing  and
+    Strube, Michael",
+  booktitle = "Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)",
+  month = jul,
+  year = "2015",
+  address = "Beijing, China",
+  publisher = "Association for Computational Linguistics",
+  url = "https://aclanthology.org/P15-1067",
+  doi = "10.3115/v1/P15-1067",
+  pages = "687--696",
+}
 @inproceedings{ComplEx,
   title={Complex embeddings for simple link prediction},
   author={Trouillon, Th{\'e}o and Welbl, Johannes and Riedel, Sebastian and Gaussier, {\'E}ric and Bouchard, Guillaume},
