增加 HolE 介绍页

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -61,6 +61,21 @@
   doi = "10.3115/v1/P15-1067",
   pages = "687--696",
 }
+@inproceedings{HolE,
+  Author = {Nickel, Maximilian and Rosasco, Lorenzo and Poggio, Tomaso},
+  Book-Group-Author = {AAAI},
+  Title = {Holographic Embeddings of Knowledge Graphs},
+  Booktitle = {THIRTIETH AAAI CONFERENCE ON ARTIFICIAL INTELLIGENCE},
+  Series = {AAAI Conference on Artificial Intelligence},
+  Year = {2016},
+  Pages = {1955-1961},
+  Note = {30th Association-for-the-Advancement-of-Artificial-Intelligence (AAAI)
+     Conference on Artificial Intelligence, Phoenix, AZ, FEB 12-17, 2016},
+  Organization = {Assoc Advancement Artificial Intelligence},
+  ISSN = {2159-5399},
+  EISSN = {2374-3468},
+  Unique-ID = {WOS:000485474201139},
+}
 @inproceedings{ComplEx,
   title={Complex embeddings for simple link prediction},
   author={Trouillon, Th{\'e}o and Welbl, Johannes and Riedel, Sebastian and Gaussier, {\'E}ric and Bouchard, Guillaume},
