增加 HolE 介绍页

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -75,6 +75,7 @@
   ISSN = {2159-5399},
   EISSN = {2374-3468},
   Unique-ID = {WOS:000485474201139},
+  url = "https://ojs.aaai.org/index.php/AAAI/article/view/10314",
 }
 @inproceedings{ComplEx,
   title={Complex embeddings for simple link prediction},
