--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -97,3 +97,10 @@
   volume = {31},
   year = {2018}
 }
+@inproceedings{RotatE,
+  title={RotatE: Knowledge Graph Embedding by Relational Rotation in Complex Space},
+  author={Zhiqing Sun and Zhi-Hong Deng and Jian-Yun Nie and Jian Tang},
+  booktitle={International Conference on Learning Representations},
+  year={2019},
+  url={https://openreview.net/forum?id=HkgEQnRqYQ},
+}
