--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,3 +1,17 @@
+@InProceedings{RESCAL,
+  author =    {Maximilian Nickel and Volker Tresp and Hans-Peter Kriegel},
+  title =     {A Three-Way Model for Collective Learning on Multi-Relational Data},
+  booktitle = {Proceedings of the 28th International Conference on Machine Learning (ICML-11)},
+  series =    {ICML '11},
+  year =      {2011},
+  editor =    {Lise Getoor and Tobias Scheffer},
+  location =  {Bellevue, Washington, USA},
+  isbn =      {978-1-4503-0619-5},
+  month =     {June},
+  publisher = {ACM},
+  address =   {New York, NY, USA},
+  pages=      {809--816},
+}
 @inproceedings{TransE,
   author = {Bordes, Antoine and Usunier, Nicolas and Garcia-Duran, Alberto and Weston, Jason and Yakhnenko, Oksana},
   booktitle = {Advances in Neural Information Processing Systems},
