增加 RESCAL 介绍页

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -11,6 +11,7 @@
   publisher = {ACM},
   address =   {New York, NY, USA},
   pages=      {809--816},
+  url = {https://icml.cc/Conferences/2011/papers/438_icmlpaper.pdf},
 }
 @inproceedings{TransE,
   author = {Bordes, Antoine and Usunier, Nicolas and Garcia-Duran, Alberto and Weston, Jason and Yakhnenko, Oksana},
