增加 ANALOGY 介绍页和示例

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -101,6 +101,21 @@
   organization={PMLR},
   url={https://proceedings.mlr.press/v48/trouillon16.html}
 }
+@InProceedings{ANALOGY,
+  title = 	 {Analogical Inference for Multi-relational Embeddings},
+  author =       {Hanxiao Liu and Yuexin Wu and Yiming Yang},
+  booktitle = 	 {Proceedings of the 34th International Conference on Machine Learning},
+  pages = 	 {2168--2178},
+  year = 	 {2017},
+  editor = 	 {Precup, Doina and Teh, Yee Whye},
+  volume = 	 {70},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {06--11 Aug},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v70/liu17d/liu17d.pdf},
+  url = 	 {https://proceedings.mlr.press/v70/liu17d.html},
+  abstract = 	 {Large-scale multi-relational embedding refers to the task of learning the latent representations for entities and relations in large knowledge graphs. An effective and scalable solution for this problem is crucial for the true success of knowledge-based inference in a broad range of applications. This paper proposes a novel framework for optimizing the latent representations with respect to the <em>analogical</em> properties of the embedded entities and relations. By formulating the objective function in a differentiable fashion, our model enjoys both its theoretical power and computational scalability, and significantly outperformed a large number of representative baseline methods on benchmark datasets. Furthermore, the model offers an elegant unification of several well-known methods in multi-relational embedding, which can be proven to be special instantiations of our framework.}
+}
 @inproceedings{SimplE,
   author = {Kazemi, Seyed Mehran and Poole, David},
   booktitle = {Advances in Neural Information Processing Systems},
