增加 R-GCN 介绍页面

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -127,6 +127,15 @@
   volume = {31},
   year = {2018}
 }
+@inproceedings{R-GCN,
+  title={Modeling relational data with graph convolutional networks},
+  author={Schlichtkrull, Michael and Kipf, Thomas N and Bloem, Peter and Van Den Berg, Rianne and Titov, Ivan and Welling, Max},
+  booktitle={The Semantic Web: 15th International Conference, ESWC 2018, Heraklion, Crete, Greece, June 3--7, 2018, Proceedings 15},
+  pages={593--607},
+  year={2018},
+  organization={Springer},
+  url={https://arxiv.org/abs/1703.06103}
+}
 @inproceedings{RotatE,
   title={RotatE: Knowledge Graph Embedding by Relational Rotation in Complex Space},
   author={Zhiqing Sun and Zhi-Hong Deng and Jian-Yun Nie and Jian Tang},
