--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -143,3 +143,10 @@
   year={2019},
   url={https://openreview.net/forum?id=HkgEQnRqYQ},
 }
+@inproceedings{CompGCN,
+  title={Composition-based Multi-Relational Graph Convolutional Networks},
+  author={Shikhar Vashishth and Soumya Sanyal and Vikram Nitin and Partha Talukdar},
+  booktitle={International Conference on Learning Representations},
+  year={2020},
+  url={https://openreview.net/forum?id=BylA_C4tPr}
+}
