--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -150,3 +150,18 @@
   year={2020},
   url={https://openreview.net/forum?id=BylA_C4tPr}
 }
+@misc{ConvE,
+  title={Convolutional 2D Knowledge Graph Embeddings}, 
+  author={Tim Dettmers and Pasquale Minervini and Pontus Stenetorp and Sebastian Riedel},
+  year={2018},
+  eprint={1707.01476},
+  archivePrefix={arXiv},
+  primaryClass={cs.LG}
+}
+@inproceedings{FB15k-237,
+  title={Observed versus latent features for knowledge base and text inference},
+  author={Toutanova, Kristina and Chen, Danqi},
+  booktitle={Proceedings of the 3rd workshop on continuous vector space models and their compositionality},
+  pages={57--66},
+  year={2015}
+}
